--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.3",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.9.2",
+    "nodemailer": "^6.9.12",
     "nodemon": "^3.1.0",
     "uuid": "^9.0.1"
   }
